--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -197,6 +197,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ActivityType.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\CourseModule.cs" />
     <Compile Include="Models\IdentityModels.cs" />
