--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -200,7 +200,7 @@
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\CourseModule.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="DataAccess\ApplicationDbContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ModuleActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
