--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -190,8 +190,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CourseModulesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ModuleActivitiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -200,6 +202,7 @@
       <DependentUpon>201711231208181_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ActivityType.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -268,6 +271,21 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Delete.cshtml" />
+    <Content Include="Views\Courses\Details.cshtml" />
+    <Content Include="Views\Courses\Edit.cshtml" />
+    <Content Include="Views\Courses\Index.cshtml" />
+    <Content Include="Views\CourseModules\Create.cshtml" />
+    <Content Include="Views\CourseModules\Delete.cshtml" />
+    <Content Include="Views\CourseModules\Details.cshtml" />
+    <Content Include="Views\CourseModules\Edit.cshtml" />
+    <Content Include="Views\CourseModules\Index.cshtml" />
+    <Content Include="Views\ModuleActivities\Create.cshtml" />
+    <Content Include="Views\ModuleActivities\Delete.cshtml" />
+    <Content Include="Views\ModuleActivities\Details.cshtml" />
+    <Content Include="Views\ModuleActivities\Edit.cshtml" />
+    <Content Include="Views\ModuleActivities\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
