Add StudentCourseController and views

--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ModuleActivitiesController.cs" />
+    <Compile Include="Controllers\StudentCourseController.cs" />
     <Compile Include="DataAnnotations\DateTimeToSqlDateTime.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -311,6 +312,8 @@
     <Content Include="Views\ModuleActivities\Details.cshtml" />
     <Content Include="Views\ModuleActivities\Edit.cshtml" />
     <Content Include="Views\ModuleActivities\Index.cshtml" />
+    <Content Include="Views\StudentCourse\Details.cshtml" />
+    <Content Include="Views\StudentCourse\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
