Add controller and views for StudentCourseModule

--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ModuleActivitiesController.cs" />
+    <Compile Include="Controllers\StudentCourseModulesController.cs" />
     <Compile Include="DataAnnotations\DateTimeToSqlDateTime.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -312,6 +313,11 @@
     <Content Include="Views\ModuleActivities\Details.cshtml" />
     <Content Include="Views\ModuleActivities\Edit.cshtml" />
     <Content Include="Views\ModuleActivities\Index.cshtml" />
+    <Content Include="Views\StudentCourseModules\Create.cshtml" />
+    <Content Include="Views\StudentCourseModules\Delete.cshtml" />
+    <Content Include="Views\StudentCourseModules\Details.cshtml" />
+    <Content Include="Views\StudentCourseModules\Edit.cshtml" />
+    <Content Include="Views\StudentCourseModules\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
