add bootstrap to dropdownlist in view

--- a/Learny/Web.config
+++ b/Learny/Web.config
@@ -20,7 +20,7 @@
   </appSettings>
   <system.web>
 
-    <globalization culture="sv-SV" uiCulture="sv"/>
+    <!--<globalization culture="sv-SV" uiCulture="sv"/>-->
     
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
