add upload document action and view

--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\201712011008541_add_document_entity.Designer.cs">
       <DependentUpon>201712011008541_add_document_entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712011331411_add_relations_to_document.cs" />
+    <Compile Include="Migrations\201712011331411_add_relations_to_document.Designer.cs">
+      <DependentUpon>201712011331411_add_relations_to_document.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Models\Document.cs" />
@@ -325,10 +329,10 @@
     <Content Include="Views\StudentCourse\Module.cshtml" />
     <Content Include="Views\StudentCourse\Activity.cshtml" />
     <Content Include="Views\Account\TeacherCreateStudent.cshtml" />
+    <Content Include="Views\Document\UploadDocument.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
-    <Folder Include="Views\Document\" />
     <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
@@ -355,6 +359,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712011008541_add_document_entity.resx">
       <DependentUpon>201712011008541_add_document_entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712011331411_add_relations_to_document.resx">
+      <DependentUpon>201712011331411_add_relations_to_document.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
