--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -327,6 +327,7 @@
     <Content Include="Views\StudentCourse\Activity.cshtml" />
     <Content Include="Views\Account\_StudentsPartial.cshtml" />
     <Content Include="Views\Account\CreateStudent.cshtml" />
+    <Content Include="Views\Account\CreateTeacher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
