--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -239,7 +239,7 @@
     <Compile Include="ViewModels\StudentCourseModuleViewModel.cs" />
     <Compile Include="ViewModels\StudentModuleActivity.cs" />
     <Compile Include="ViewModels\StudentListViewModel.cs" />
-    <Compile Include="ViewModels\StudentViewModel.cs" />  
+    <Compile Include="ViewModels\StudentViewModel.cs" />
     <Compile Include="ViewModels\TeacherViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -328,6 +328,7 @@
     <Content Include="Views\Account\_StudentsPartial.cshtml" />
     <Content Include="Views\Account\CreateStudent.cshtml" />
     <Content Include="Views\Account\CreateTeacher.cshtml" />
+    <Content Include="Views\Account\_TeachersPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
