--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -328,6 +328,7 @@
     <Content Include="Views\Account\CreateStudent.cshtml" />
     <Content Include="Views\Account\ListStudents.cshtml" />
     <Content Include="Views\Account\StudentDetails.cshtml" />
+    <Content Include="Views\Account\EditStudent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
