Change name on StudentViewModel to StudentCreateViewModel

--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -244,7 +244,7 @@
     <Compile Include="ViewModels\StudentCourseModuleViewModel.cs" />
     <Compile Include="ViewModels\StudentModuleActivity.cs" />
     <Compile Include="ViewModels\StudentListViewModel.cs" />
-    <Compile Include="ViewModels\StudentViewModel.cs" />
+    <Compile Include="ViewModels\StudentCreateViewModel.cs" />
     <Compile Include="ViewModels\TeacherViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
