--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ModuleActivitiesController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="DataAnnotations\DateTimeToSqlDateTime.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -323,11 +324,11 @@
     <Content Include="Views\ModuleActivities\Index.cshtml" />
     <Content Include="Views\Document\UploadDocument.cshtml" />
     <Content Include="Views\Document\Index.cshtml" />
-    <Content Include="Views\Account\_StudentsPartial.cshtml" />
-    <Content Include="Views\Account\CreateStudent.cshtml" />
-    <Content Include="Views\Account\ListStudents.cshtml" />
-    <Content Include="Views\Account\StudentDetails.cshtml" />
-    <Content Include="Views\Account\EditStudent.cshtml" />
+    <Content Include="Views\Student\_StudentsPartial.cshtml" />
+    <Content Include="Views\Student\Create.cshtml" />
+    <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Student\Details.cshtml" />
+    <Content Include="Views\Student\Edit.cshtml" />
     <Content Include="Views\Account\CreateTeacher.cshtml" />
     <Content Include="Views\Account\_TeachersPartial.cshtml" />
   </ItemGroup>
