--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -332,6 +332,7 @@
     <Content Include="Views\Student\Edit.cshtml" />
     <Content Include="Views\Teacher\Create.cshtml" />
     <Content Include="Views\Teacher\_TeachersPartial.cshtml" />
+    <Content Include="Views\Document\_DocumentsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
