--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -224,7 +224,7 @@
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Settings\Settings.cs" />
-    <Compile Include="SharedClasses\CourseSchedule.cs" />
+    <Compile Include="SharedClasses\OneScheduleEntry.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ActivityType.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
