--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -315,7 +315,7 @@
     <Content Include="Views\Courses\Details.cshtml" />
     <Content Include="Views\Courses\Edit.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
-    <Content Include="Views\CourseModules\Create.cshtml" />
+    <Content Include="Views\CourseModules\Manage.cshtml" />
     <Content Include="Views\CourseModules\Delete.cshtml" />
     <Content Include="Views\CourseModules\Details.cshtml" />
     <Content Include="Views\CourseModules\Edit.cshtml" />
