--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -258,7 +258,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\Stockholm_backg.jpg" />
-    <Content Include="Content\Style.css" />
+    <Content Include="Content\LoginStyle.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
