--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -348,6 +348,7 @@
     <Content Include="Views\CourseModules\_ModulesPartial.cshtml" />
     <Content Include="Views\Teacher\Edit.cshtml" />
     <Content Include="Views\Teacher\Details.cshtml" />
+    <Content Include="Views\ModuleActivities\Manage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
