--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -349,6 +349,7 @@
     <Content Include="Views\Teacher\Edit.cshtml" />
     <Content Include="Views\Teacher\Details.cshtml" />
     <Content Include="Views\ModuleActivities\Manage.cshtml" />
+    <Content Include="Views\ModuleActivities\_ActivitiesPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
