--- a/Learny/Learny.csproj
+++ b/Learny/Learny.csproj
@@ -348,6 +348,7 @@
     <Content Include="Views\Document\Delete.cshtml" />
     <Content Include="Views\ModuleActivities\Manage.cshtml" />
     <Content Include="Views\ModuleActivities\_ActivitiesPartial.cshtml" />
+    <Content Include="Views\Student\_StudentsTablePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
