Change text to "Ta bort" on delete button

--- a/Learny/Web.config
+++ b/Learny/Web.config
@@ -22,9 +22,9 @@
     <!--<globalization culture="sv-SV" uiCulture="sv"/>-->
 
     <!--=not scaffolded start-->
-    <!--<customErrors mode="On">
+    <customErrors mode="On">
       <error statusCode="404" redirect="Home/Index" />
-    </customErrors>-->
+    </customErrors>
     <!--=not scaffolded end-->
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
